--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
                   <div></div>
                   <button class="button button1" id="enter" onclick="grabAddress()">Enter</button>
 
+                  <button class="button button1" id="route" onclick="createRoute() style='margin-left:64px'">Map Route</button>
+
                   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
               <!-- CREATES MAP  -->
@@ -189,7 +191,6 @@
               <label>Path:</label>
               <label id="path"></label>
               <div></div>
-              <button class="button button1" id="route" onclick="createRoute()">Map Route</button>
               
               <!-- ADDS JAVASCRIPT FILE TO INDEX.HTML -->
               <script type="module" src="map.js"> </script>
