--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
                 <p>You can either manually type the address in this format: <b><q>123 N Something St</q>.</b></p>
                 <p><b>OR</b></p> 
                 <p>You can click the position on the map, copy the coordinates in the pop up window, then paste them into Start/End boxes.</p>
+                <div></div>
+                <p>Click "Enter" to compute the route, if no error messages are received, click "Map Route" to display the route on the map.</p>
   
                 <!-- Creates text and then an input for text -->
                   <label for="start">Starting Address:</label>
