--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                   <input type="text" id="start" name="startTxt" size="20" style="color: black" placeholder="&quot;123 N 3rd St&quot;"/>
                   <div></div>
                   <label for="end">Ending Address:&nbsp;&nbsp;</label>
-                  <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="&quot;321 N 4th St&quot;"/>
+                  <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="or &quot;Latitude,Longitude&quot;"/>
                   <div></div>
                   <button class="button button1" id="enter" onclick="grabAddress()">Enter</button>
 
