--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
                   <label for="end">Ending Address:&nbsp;&nbsp;</label>
                   <input type="text" id="end" name="endTxt" size="20" style="color: black" placeholder="or &quot;Lat,Lng&quot;"/>
                   <div></div>
-                  <button class="button button1" id="enter" style='margin-left:64px' onclick="grabAddress()">Enter</button>
+                  <button class="button button1" id="enter" onclick="grabAddress()">Enter</button>
 
-                  <button class="button button1" id="route" style='margin-left:250px'>Map Route</button>    <!-- <button class="button button1" id="route" onclick="createRoute()" style='margin-left:682px'>Map Route</button> -->
+                  <button class="button button1" id="route" style='margin-left:100px'>Map Route</button>    <!-- <button class="button button1" id="route" onclick="createRoute()" style='margin-left:682px'>Map Route</button> -->
 
                   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
