--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@
               <label>Path:</label>
               <label id="path"></label>
               <div></div>
+              <label>Total Elevation Change:</label>
+              <label id=change"></label>
               
               <!-- ADDS JAVASCRIPT FILE TO INDEX.HTML -->
               <script type="module" src="map.js"> </script>
