--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
               <div></div>
               <label>Total Elevation Change:</label>
               <label id=change"></label>
+              <div></div>
               
               <!-- ADDS JAVASCRIPT FILE TO INDEX.HTML -->
               <script type="module" src="map.js"> </script>
