--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
               <label id="path"></label>
               <div></div>
               <label>Total Elevation Change:</label>
-              <label id=change"></label>
+              <label id="change"></label>
               <div></div>
               
               <!-- ADDS JAVASCRIPT FILE TO INDEX.HTML -->
