--- a/Code/index.html
+++ b/Code/index.html
@@ -150,7 +150,7 @@
 
               <div></div>
               <p>Grabbing the address inputs, it will check whether the inputs are coordinates or readable addresses. If they are coordinates, then it calls the Reverse Geocoding Request to get a readable address to the coordinates.</p>
-               <code><pre>
+               <pre><code>
                   //START INPUT
                   //Check if it has a left bracket indicating the user input lat lng
                   if(start.charAt(2) == '.'){
@@ -178,7 +178,7 @@
                      //converting JSON obj into string
                      startOutput = `${startAddy}`;
                  
-               </pre></code>
+               </code></pre>
             </article>
           </div>
         </div>
