--- a/Code/index.html
+++ b/Code/index.html
@@ -149,6 +149,7 @@
                 </code></pre>
 
               <div></div>
+              <h2 id="forces">Reverse Geocoding API</h2>
               <p>Grabbing the address inputs, it will check whether the inputs are coordinates or readable addresses. If they are coordinates, then it calls the Reverse Geocoding Request to get a readable address to the coordinates.</p>
                <pre><code>
     //START INPUT
